# TerminalTask

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
tt/: __init__.py  main.py
tt/core/: ids.py  tasks.py
tt/infra/: github.py  sqlite.py
tt/tui/: app.py
tt/tui/screens/: __init__.py  create_task.py  menu.py  pr_inbox.py  tasks.py
