[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-terminal"
version = "0.2.0"
description = "Task Terminal - A local-first developer tool for generating and tracking task IDs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sumantha K A"}
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "pyperclip>=1.8.2",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
tt = "tt.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
